@@ -1,3 +1,7 @@
+20100301
+ - (dtucker) [regress/{cert-hostkey,cfgmatch,cipher-speed}.sh} Replace
+   "echo -n" with "echon" for portability.
+
 20100228
  - (djm) [auth.c] On Cygwin, refuse usernames that have differences in
    case from that matched in the system password database. On this
